@startuml
'https://plantuml.com/class-diagram
abstract class ChuoiMenhGiaFactory{
    # {abstract} ATM_TheoMenhGia getChuoiMenhGia(int menhGia)
    void rutTien(int soTien, int menhGiaCaoNhat)
}

class ChuoiMenhGiaVND{}

abstract class ATM_TheoMenhGia{
    - int menhGia;
    + {abstract}ATM_TheoMenhGia menhGiaKeTiep(ATM_TheoMenhGia m)
    + {abstract} void rutTien(int soTien)
}

class MenhGia{}
class MenhGiaThapNhat{}
ATM_TheoMenhGia <|-- MenhGia
ATM_TheoMenhGia <|-- MenhGiaThapNhat
MenhGia --> ATM_TheoMenhGia: keTiep
ChuoiMenhGiaFactory <|-- ChuoiMenhGiaVND
ChuoiMenhGiaVND *--> ATM_TheoMenhGia

note bottom of MenhGia
Phương thức rút tiền
    số tờ = số tiền / mệnh giá
    số dư = số tiền % mệnh giá
    Nếu số tờ > 0 --> in số tờ: mệnh giá
    Nếu số dư > 0:
        Chuyển cho thành phần kế tiếp
end note
note bottom of MenhGiaThapNhat
    Phương thức rút tiền
        số tờ = soTien/menhGia
        in số tờ: menhGia
end note
@enduml